[package]
name = "seq_feat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'


[lib]
name = "seq_feat"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
regex = "1.0"
lazy_static = "1.0"
realfft = "3.0.2"
rustfft = "6.0.1"
itertools = "0.10.5"
anyhow = "1.0.69"
